[gd_scene load_steps=2 format=3 uid="uid://dx5pc12i4788v"]

[ext_resource type="Script" uid="uid://dcgct8adrkkbg" path="res://UI/LevelButton.gd" id="1_ju1u4"]

[node name="LevelButton" type="Button"]
custom_minimum_size = Vector2(120, 120)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ju1u4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 224.0
offset_bottom = 160.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelNumber" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LockIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
